Pushing Hawad's Code App

--- a/Hawad/app/src/main/res/layout/activity_history.xml
+++ b/Hawad/app/src/main/res/layout/activity_history.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="16dp">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
@@ -28,8 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Date Range"
-            app:backgroundTint="#F20000" />
+            android:text="Date Range" />
     </LinearLayout>
 
     <TextView
@@ -45,6 +44,7 @@
         android:id="@+id/historyRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     <Button
