--- a/Hawad/app/src/main/res/values/themes.xml
+++ b/Hawad/app/src/main/res/values/themes.xml
@@ -1,15 +1,15 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.MyApplication" parent="Theme.Material3.Light">
+    <style name="Theme.MyApplication" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="android:colorBackground">#FAFAFA</item>
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="android:colorBackground">#F6F6F6</item>
         <item name="colorSurface">@color/white</item>
         <item name="colorPrimaryVariant">@color/purple_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/colorAccent</item>
+        <item name="colorSecondaryVariant">@color/colorAccent</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/colorAccent</item>
